<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tittle_register_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ao_english"
                android:text="@string/register_tittle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:helperText="@string/requiered_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:helperText="@string/requiered_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/documento_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:helperText="@string/requiered_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/document_text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numerciv_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:helperText="@string/requiered_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numerciv_text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numerciv"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:endIconMode="password_toggle"
                app:helperText="@string/requiered_min">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/guardar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>